--- a/aFirstXourse.tex
+++ b/aFirstXourse.tex
@@ -10,7 +10,7 @@
 \part{The First Topic of This Course}
 \chapterstyle
 \activity{aFirstFolder/aFirstActivity}
-\sectionstyle
+\chapterstyle
 \activity{aFirstFolder/exercises/someExercises}
 \chapterstyle
 \activity{aFirstFolder/aGraphicsActivity}
